force-app/main/default/objects/Etiquettes_et_controles__c/Etiquettes_et_controles__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Etiquettes et contrôles</label>
</CustomObject>