force-app/main/default/objects/Etiquettes_et_controles__c/fields/Libell_de_pr_codage__c.field-meta.xml
<CustomField>
    <fullName>Libell_de_pr_codage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Libellé de pré-codage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>