force-app/main/default/objects/Etiquettes_et_controles__c/fields/Nom_de_l_etiquette__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_etiquette__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nom de l&apos;etiquette</label>
    <length>255</length>
    <type>Text</type>
</CustomField>