force-app/main/default/objects/Etiquettes_et_controles__c/fields/Sous_type_controle__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_controle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sous-type contrôle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>