force-app/main/default/objects/Etiquettes_et_controles__c/fields/Type_controle__c.field-meta.xml
<CustomField>
    <fullName>Type_controle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type contrôle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>